--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3344,7 +3344,7 @@ input, select, textarea {
 				}
 
 			#wrapper > section.intro {
-				align-items: center;
+				align-items: left;
 			}
 
 				#wrapper > section.intro > header {
