--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3411,7 +3411,7 @@ input, select, textarea {
 			position: absolute;
 			right: 0;
 			top: 0;
-			/* vertical-align: middle; */
+			vertical-align: middle;
 			width: 7em;
 		}
 
@@ -3814,7 +3814,6 @@ input, select, textarea {
 
 	#main > header {
 		padding: 12em 0 10em 0 ;
-		/* background-image: "../../images/banner.jpg"; */
 		background-image: -moz-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("../../images/banner.jpg");
 		background-image: -webkit-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("../../images/banner.jpg");
 		background-image: -ms-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("../../images/banner.jpg");
@@ -3965,7 +3964,6 @@ input, select, textarea {
 /* Landing */
 
 	body.landing #page-wrapper {
-		/* background-image: "../../images/banner.jpg"; */
 		background-image: -moz-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("../../images/banner.jpg");
 		background-image: -webkit-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("../../images/banner.jpg");
 		background-image: -ms-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("../../images/banner.jpg");
@@ -3987,7 +3985,6 @@ input, select, textarea {
 
 	body.is-mobile.landing #banner,
 	body.is-mobile.landing .wrapper.style4 {
-		/* background-image: "../../images/banner.jpg"; */
 		background-image: -moz-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("../../images/banner.jpg");
 		background-image: -webkit-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("../../images/banner.jpg");
 		background-image: -ms-linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url("../../images/banner.jpg");
